修正配置